# streak

./: .gitignore  CMakeLists.txt  ROADMAP.md
data/: CMakeLists.txt  com.github.dbhowell.streak.appdata.xml  com.github.dbhowell.streak.desktop
debian/: changelog  control  copyright
po/: CMakeLists.txt  com.github.dbhowell.streak.pot
schemas/: CMakeLists.txt  com.github.dbhowell.streak.gschema.xml
src/: CMakeLists.txt  MainWindow.vala  Settings.vala  Streak.vala
src/Dialogs/: Preferences.vala
src/Models/: StripeError.vala  StripeList.vala  StripeObject.vala  StripeTransaction.vala
src/Services/: StripeAccount.vala
src/Widgets/: HeaderBar.vala  TransactionsTreeView.vala  WelcomeView.vala
